--- a/views/index.html
+++ b/views/index.html
@@ -12,13 +12,11 @@
 <div class="container" ng-controller="WildsnakeCtrl as ctrl">
   <img src="images/logo.png" alt="wildsnake" class="logo"/>
 
-  <p class="text">{{ pageMessage }}</p>
-
   <h1 class="products-header">Top products</h1>
 
   <ul class="product-grid">
     <li class="item" ng-repeat="product in ctrl.products">
-      <img class="product-image" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=180%C3%97160&w=180&h=160" />
+      <img class="product-image" src="[[product.imageUrl]]" title="[[product.description]]" />
       <div class="bottom-row">
         <div class="pull-left">[[product.name]]</div>
         <div class="pull-right">[[product.price]]</div>
